cluster/apps/the-weather/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-weather
  namespace: the-weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-weather
  template:
    metadata:
      labels:
        app: the-weather
    spec:
      containers:
      - name: the-weather
        image: ghcr.io/t-eckert/the-weather:latest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "16Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "100m"
