cluster/apps/the-weather/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-weather-svc
  namespace: the-weather
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: the-weather
